Test case 6, 8, 11 i NonFunctionalTests